--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "env-manager",
-  "version": "1.0.0",
+  "name": "@toprakuzuner/env-manager",
+  "version": "1.0.1",
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
